removed presentation links, updated schedule

--- a/fun-time.html
+++ b/fun-time.html
@@ -12,7 +12,6 @@
 <body>
     <div class="smile green mid-top-left"></div>
     <div class="smile blue mid-top-right rotate-90"></div>
-    <div class="smile yellow mid-right-edge rotate-180"></div>
     <div class="smile red top-mid-logo-cover rotate-30"></div>
     <div class="container">
         <div class="inner">
@@ -42,6 +41,7 @@
                                 <p>Jesse</p>
                                 <p>Kate</p>
                                 <p>Tressa</p>
+                                <p>Claire</p>
                             </span>
                             <a></a>
                         </li>
