--- a/presentations.html
+++ b/presentations.html
@@ -28,133 +28,126 @@
                     <ol>
                         <li>
                             <span>
-                                12:30 - Hard Things Book Club<br/>
+                                12:30 - The Coddiwomple Bookclub<br/>
                                 <p>Erica + Jesse</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 12:35 - Better Travel<br/>
                                 <p>Lacey + Sara N.</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 12:42 - Innovatemap UX Encyclopedia<br/>
                                 <p>Amanda</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 12:52 - Operation Jigglypuff<br/>
                                 <p>Kaleem</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 1:02 - Operation Ohm<br/>
                                 <p>Allison</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 1:07 - Web Dev Documentation<br/>
                                 <p>Brad + Jesse</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                1:12 - The Spencer Project<br/>
-                                <p>Cassidy</p>
+                                1:12 - Dream, Design, Deliver<br/>
+                                <p>Kate</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 1:19 - Latinos in Tech<br/>
                                 <p>Yhareli</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 1:29 - Flappy Map<br/>
                                 <p>Yhareli</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 1:35 - INTERMISSION<br/>
                                 <!-- <p></p> -->
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
                                 1:45 - Product Design Process<br/>
                                 <p>Diana</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                1:55 - The Brand Illuminati of Figma<br/>
-                                <p>Tressa</p>
+                                1:55 - Consolidate 2 Innovate<br/>
+                                <p>Tressa + Parker</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                2:00 - Dream, Design, Deliver<br/>
-                                <p>Kate</p>
-                            </span>
-                            <a href="#">View</a>
-                        </li>
-                        <li>
-                            <span>
-                                2:07 - Product Drops<br/>
+                                2:00 - Product Drops<br/>
                                 <p>Kaleem</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                2:14 - Marvelous<br/>
+                                2:07 - Marvelous<br/>
                                 <p>Tressa</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                2:21 - Jon, Jacob, JingePfeifer Shiiiiiitttt<br/>
+                                2:14 - Jon, Jacob, JingePfeifer Shiiiiiitttt<br/>
                                 <p>Meghan</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                2:28 - Project Viking Chant<br/>
+                                2:21 - Project Viking Chant<br/>
                                 <p>Piyush + Ashlyn</p>
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                2:35 - INTERMISSION<br/>
+                                2:28 - INTERMISSION<br/>
                                 <!-- <p></p> -->
                             </span>
-                            <a href="#">View</a>
+                            <a></a>
                         </li>
                         <li>
                             <span>
-                                2:45 - Fun Time<br/>
+                                2:35 - Fun Time<br/>
                                 <!-- <p></p> -->
                             </span>
                             <a href="/science-fair/fun-time.html">View</a>
