--- a/presentations-with-links.html
+++ b/presentations-with-links.html
@@ -31,16 +31,16 @@
                                 12:30 - The Coddiwomple Bookclub<br/>
                                 <p>Erica + Jesse</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://www.dropbox.com/scl/fi/abjgzl99n2vt1mgqkxcpv/The-Coddiwomple-Bookclub-Presentation-9-21-2021.pptx?dl=0&rlkey=b99k4boarh39x5ujbo4tm5xi5" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://www.dropbox.com/scl/fi/abjgzl99n2vt1mgqkxcpv/The-Coddiwomple-Bookclub-Presentation-9-21-2021.pptx?dl=0&rlkey=b99k4boarh39x5ujbo4tm5xi5" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
                                 12:35 - Better Travel<br/>
                                 <p>Lacey + Sara N.</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://app.pitch.com/app/presentation/b87499a5-9bac-452a-affb-b45442d387fd/6f019840-23ef-4e7f-8350-fade978b4ef3" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://app.pitch.com/app/presentation/b87499a5-9bac-452a-affb-b45442d387fd/6f019840-23ef-4e7f-8350-fade978b4ef3" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
@@ -55,32 +55,32 @@
                                 12:52 - Operation Jigglypuff<br/>
                                 <p>Kaleem</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://operation-jigglypuff.herokuapp.com/" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://operation-jigglypuff.herokuapp.com/" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
                                 1:02 - Operation Ohm<br/>
                                 <p>Allison</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://www.dropbox.com/scl/fi/g1897t5ib7m90zpw5ys6b/Operation-Ohm.pptx?dl=0&rlkey=ltvainkxe35pyn9pvg9hylfbv" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://www.dropbox.com/scl/fi/g1897t5ib7m90zpw5ys6b/Operation-Ohm.pptx?dl=0&rlkey=ltvainkxe35pyn9pvg9hylfbv" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
                                 1:07 - Web Dev Documentation<br/>
                                 <p>Brad + Jesse</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://www.notion.so/innovatemap/Web-Dev-Documentation-782d8454e637493cb1ea09e1a3fd9f1a" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://www.notion.so/innovatemap/Web-Dev-Documentation-782d8454e637493cb1ea09e1a3fd9f1a" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
                                 1:12 - Dream, Design, Deliver<br/>
                                 <p>Kate</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://app.pitch.com/app/presentation/b87499a5-9bac-452a-affb-b45442d387fd/cac8e1c2-30b4-4d68-9a89-515d4de7238a/90d570f5-836f-4cb7-9d9f-96370f84e923" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://app.pitch.com/app/presentation/b87499a5-9bac-452a-affb-b45442d387fd/cac8e1c2-30b4-4d68-9a89-515d4de7238a/90d570f5-836f-4cb7-9d9f-96370f84e923" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
@@ -118,16 +118,16 @@
                                 1:55 - Consolidate 2 Innovate<br/>
                                 <p>Tressa + Parker</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://www.figma.com/proto/R030XJga68Dbqhl3iKO1pz/Science-Fair-2021:-Brand-Template-Project?page-id=0%3A1&node-id=1%3A2&viewport=273%2C48%2C0.04&scaling=scale-down&starting-point-node-id=1%3A2" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://www.figma.com/proto/R030XJga68Dbqhl3iKO1pz/Science-Fair-2021:-Brand-Template-Project?page-id=0%3A1&node-id=1%3A2&viewport=273%2C48%2C0.04&scaling=scale-down&starting-point-node-id=1%3A2" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
                                 2:00 - Brand Spectrum<br/>
                                 <p>Claire</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://www.figma.com/file/m5cRZRiFur7Ba2y9uXymXH/BrandSpecrtrum_ScienceFair?node-id=0%3A1" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://www.figma.com/file/m5cRZRiFur7Ba2y9uXymXH/BrandSpecrtrum_ScienceFair?node-id=0%3A1" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
@@ -142,8 +142,8 @@
                                 2:12 - Marvelous<br/>
                                 <p>Tressa</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/f342501b-a0d5-4aad-83db-a1f38d5bec56" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/f342501b-a0d5-4aad-83db-a1f38d5bec56" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
@@ -158,15 +158,15 @@
                                 2:26 - Project Viking Chant<br/>
                                 <p>Piyush + Ashlyn</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/836c7fe7-e165-4b89-9fb7-e8baddced61f" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/836c7fe7-e165-4b89-9fb7-e8baddced61f" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
                                 2:32 - INTERMISSION<br/>
                                 <!-- <p></p> -->
                             </span>
-                            <a></a>
+                            <!-- <a></a> -->
                         </li>
                         <li>
                             <span>
