updated project teams

--- a/presentations-with-links.html
+++ b/presentations-with-links.html
@@ -29,7 +29,7 @@
                         <li>
                             <span>
                                 12:30 - The Coddiwomple Bookclub<br/>
-                                <p>Erica + Jesse</p>
+                                <p>Erica + Jesse + Piyush + Tressa + Ashlyn + Christian</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://www.dropbox.com/scl/fi/abjgzl99n2vt1mgqkxcpv/The-Coddiwomple-Bookclub-Presentation-9-21-2021.pptx?dl=0&rlkey=b99k4boarh39x5ujbo4tm5xi5" target="_blank">View</a>
@@ -37,7 +37,7 @@
                         <li>
                             <span>
                                 12:35 - Better Travel<br/>
-                                <p>Lacey + Sara N.</p>
+                                <p>Lacey + Sara N. + Kate</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://app.pitch.com/app/presentation/b87499a5-9bac-452a-affb-b45442d387fd/6f019840-23ef-4e7f-8350-fade978b4ef3" target="_blank">View</a>
@@ -45,7 +45,7 @@
                         <li>
                             <span>
                                 12:42 - Innovatemap UX Encyclopedia<br/>
-                                <p>Amanda</p>
+                                <p>Amanda + Jon</p>
                             </span>
                             <a></a>
                             <!-- <a href="" target="_blank">View</a> -->
@@ -53,7 +53,7 @@
                         <li>
                             <span>
                                 12:52 - Operation Jigglypuff<br/>
-                                <p>Kaleem</p>
+                                <p>Kaleem + TJ + Austin + Jesse</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://operation-jigglypuff.herokuapp.com/" target="_blank">View</a>
@@ -61,7 +61,7 @@
                         <li>
                             <span>
                                 1:02 - Operation Ohm<br/>
-                                <p>Allison</p>
+                                <p>Allison + Spencer</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://www.dropbox.com/scl/fi/g1897t5ib7m90zpw5ys6b/Operation-Ohm.pptx?dl=0&rlkey=ltvainkxe35pyn9pvg9hylfbv" target="_blank">View</a>
@@ -69,7 +69,7 @@
                         <li>
                             <span>
                                 1:07 - Web Dev Documentation<br/>
-                                <p>Brad + Jesse</p>
+                                <p>Jesse + Brad + Lauren + Andy</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://www.notion.so/innovatemap/Web-Dev-Documentation-782d8454e637493cb1ea09e1a3fd9f1a" target="_blank">View</a>
@@ -93,7 +93,7 @@
                         <li>
                             <span>
                                 1:29 - Flappy Map<br/>
-                                <p>Yhareli</p>
+                                <p>Yhareli + Brad</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://www.instagram.com/ar/3036036696675154/?ch=ZmY2MzQ2YjRhNmRhYjRlODZhNGFmOGQwYmI2MWE5Zjc%3D" target="_blank">View</a>
@@ -108,7 +108,7 @@
                         <li>
                             <span>
                                 1:45 - Product Design Process<br/>
-                                <p>Diana</p>
+                                <p>Diana + Piyush + Jon</p>
                             </span>
                             <a></a>
                             <!-- <a href="" target="_blank">View</a> -->
@@ -124,7 +124,7 @@
                         <li>
                             <span>
                                 2:00 - Brand Spectrum<br/>
-                                <p>Claire</p>
+                                <p>Claire + Andy</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://www.figma.com/file/m5cRZRiFur7Ba2y9uXymXH/BrandSpecrtrum_ScienceFair?node-id=0%3A1" target="_blank">View</a>
@@ -148,7 +148,7 @@
                         <li>
                             <span>
                                 2:19 - Jon, Jacob, JingePfeifer Shiiiiiitttt<br/>
-                                <p>Meghan</p>
+                                <p>Meghan + Jake + Jon</p>
                             </span>
                             <a></a>
                             <!-- <a href="" target="_blank">View</a> -->
@@ -156,7 +156,7 @@
                         <li>
                             <span>
                                 2:26 - Project Viking Chant<br/>
-                                <p>Piyush + Ashlyn</p>
+                                <p>Piyush + Ashlyn + Tressa</p>
                             </span>
                             <!-- <a></a> -->
                             <a href="https://app.pitch.com/app/presentation/aecafac1-c485-4ad6-bdc2-b80b4dc62761/836c7fe7-e165-4b89-9fb7-e8baddced61f" target="_blank">View</a>
