latinos in tech fix

--- a/presentations-with-links.html
+++ b/presentations-with-links.html
@@ -47,8 +47,8 @@
                                 12:42 - Innovatemap UX Encyclopedia<br/>
                                 <p>Amanda + Jon</p>
                             </span>
-                            <a></a>
-                            <!-- <a href="" target="_blank">View</a> -->
+                            <!-- <a></a> -->
+                            <a href="https://paper.dropbox.com/doc/Innovatemap-Encyclopedia--BS_NU7hMEAhLlPG2g4cU64zVAQ-HKpS3BG2tIebqJHR9Kpre" target="_blank">View</a>
                         </li>
                         <li>
                             <span>
@@ -85,7 +85,7 @@
                         <li>
                             <span>
                                 1:19 - Latinos in Tech<br/>
-                                <p>Yhareli</p>
+                                <p>Yhareli + Laurimar</p>
                             </span>
                             <a></a>
                             <!-- <a href="" target="_blank">View</a> -->
