--- a/presentations.html
+++ b/presentations.html
@@ -85,7 +85,7 @@
                         <li>
                             <span>
                                 1:19 - Latinos in Tech<br/>
-                                <p>Yhareli</p>
+                                <p>Yhareli + Laurimar</p>
                             </span>
                             <a></a>
                             <!-- <a href="" target="_blank">View</a> -->
